--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Data Tamu</h1>
+  <h1>Formulir Tamu</h1>
 
   <form id="formData">
     <input type="hidden" id="ID">
-    <input type="text" id="NAMA" placeholder="NAMA" required>
-    <input type="text" id="INSTANSI" placeholder="INSTANSI" required>
-    <input type="text" id="KEPERLUAN" placeholder="KEPERLUAN" required>
+    <input type="text" id="NAMA" placeholder="Nama" required>
+    <input type="text" id="INSTANSI" placeholder="Instansi" required>
+    <input type="text" id="KEPERLUAN" placeholder="Keperluan" required>
     <input type="datetime-local" id="WAKTU" required>
     <button type="submit">Simpan</button>
   </form>
